K8S/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-reges: 'true'
spec:
  rules:
    - host: selimsahin.test
      http:
        paths:
          - path: /api/platforms
            pathType: Prefix
            backend:
              service:
                name: platform-srv-cluster-ip-service
                port:
                  number: 80

          - path: /api/c/platforms
            pathType: Prefix
            backend:
              service:
                name: command-srv-cluster-ip-service
                port:
                  number: 80
